--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <a href="https://carolinevieirasl.jusbrasil.com.br/artigos/1314178895/de-filho-para-pai-a-pensao-alimenticia" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to left , #1e0677, #7258d3);">
-                        <span class="new">FAMÍLIA</span>
-                        <span class='uteis'>
+                        <span class="new">FAMÍLIA</span> <!-- Aqui vai tipo-->
+                        <span class='uteis'><!-- Aqui vai titulo-->
                             De filho para pai - a pensão alimentícia
                         </span>
                     </li>
